--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,22 @@ style.css
     font-family: 'Sora', sans-serif;
 }
 
+.fa {
+    font-family: "Font Awesome 5 Free";
+}
+
+@font-face {
+    font-family: 'Font Awesome Regular';
+    src: url('../fonts/fa-regular-400.eot');
+    src: url('../fonts/fa-regular-400.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/fa-regular-400.woff2') format('woff2'),
+        url('../fonts/fa-regular-400.woff') format('woff'),
+        url('../fonts/fa-regular-400.ttf') format('truetype'),
+        url('../fonts/fa-regular-400.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* VARIABLES */
 :root {
     --brand-white: #FFF;
@@ -26,6 +42,7 @@ style.css
     --brand-green: #00CF4C;
     
     --font-barlow: "Barlow Condensed";
+    --font-fa: "Font Awesome 5 Free";
 }
 
 
@@ -59,209 +76,415 @@ style.css
     background-color: var(--brand-white);
 }
 
+.btn-outline-primary:not(:disabled):not(.disabled):active {
+    background-color: transparent;
+    border-color: var(--brand-white);
+    border-width: 2px;
+}
+
 
 /* LONG SHADOW */
 .ls {
-    text-shadow: 0px 0px 0 #000,
-        1px 1px 0 #000,
-        2px 2px 0 #000,
-        3px 3px 0 #000,
-        4px 4px 0 #000,
-        5px 5px 0 #000,
-        6px 6px 0 #000,
-        7px 7px 0 #000,
-        8px 8px 0 #000,
-        9px 9px 0 #000,
-        10px 10px 0 #000,
-        11px 11px 0 #000,
-        12px 12px 0 #000,
-        13px 13px 0 #000,
-        14px 14px 0 #000,
-        15px 15px 0 #000,
-        16px 16px 0 #000,
-        17px 17px 0 #000,
-        18px 18px 0 #000,
-        19px 19px 0 #000,
-        20px 20px 0 #000,
-        21px 21px 0 #000,
-        22px 22px 0 #000,
-        23px 23px 0 #000,
-        24px 24px 0 #000,
-        25px 25px 0 #000,
-        26px 26px 0 #000,
-        27px 27px 0 #000,
-        28px 28px 0 #000,
-        29px 29px 0 #000,
-        30px 30px 0 #000,
-        31px 31px 0 #000,
-        32px 32px 0 #000,
-        33px 33px 0 #000,
-        34px 34px 0 #000,
-        35px 35px 0 #000,
-        36px 36px 0 #000,
-        37px 37px 0 #000,
-        38px 38px 0 #000,
-        39px 39px 0 #000,
-        40px 40px 0 #000,
-        41px 41px 0 #000,
-        42px 42px 0 #000,
-        43px 43px 0 #000,
-        44px 44px 0 #000,
-        45px 45px 0 #000,
-        46px 46px 0 #000,
-        47px 47px 0 #000,
-        48px 48px 0 #000,
-        49px 49px 0 #000,
-        50px 50px 0 #000,
-        51px 51px 0 #000,
-        52px 52px 0 #000,
-        53px 53px 0 #000,
-        54px 54px 0 #000,
-        55px 55px 0 #000,
-        56px 56px 0 #000,
-        57px 57px 0 #000,
-        58px 58px 0 #000,
-        59px 59px 0 #000,
-        60px 60px 0 #000,
-        61px 61px 0 #000,
-        62px 62px 0 #000,
-        63px 63px 0 #000,
-        64px 64px 0 #000,
-        65px 65px 0 #000,
-        66px 66px 0 #000,
-        67px 67px 0 #000,
-        68px 68px 0 #000,
-        69px 69px 0 #000,
-        70px 70px 0 #000,
-        71px 71px 0 #000,
-        72px 72px 0 #000,
-        73px 73px 0 #000,
-        74px 74px 0 #000,
-        75px 75px 0 #000,
-        76px 76px 0 #000,
-        77px 77px 0 #000,
-        78px 78px 0 #000,
-        79px 79px 0 #000,
-        80px 80px 0 #000,
-        81px 81px 0 #000,
-        82px 82px 0 #000,
-        83px 83px 0 #000,
-        84px 84px 0 #000,
-        85px 85px 0 #000,
-        86px 86px 0 #000,
-        87px 87px 0 #000,
-        88px 88px 0 #000,
-        89px 89px 0 #000,
-        90px 90px 0 #000,
-        91px 91px 0 #000,
-        92px 92px 0 #000,
-        93px 93px 0 #000,
-        94px 94px 0 #000,
-        95px 95px 0 #000,
-        96px 96px 0 #000,
-        97px 97px 0 #000,
-        98px 98px 0 #000,
-        99px 99px 0 #000,
-        100px 100px 0 #000,
-        101px 101px 0 #000,
-        102px 102px 0 #000,
-        103px 103px 0 #000,
-        104px 104px 0 #000,
-        105px 105px 0 #000,
-        106px 106px 0 #000,
-        107px 107px 0 #000,
-        108px 108px 0 #000,
-        109px 109px 0 #000,
-        110px 110px 0 #000,
-        111px 111px 0 #000,
-        112px 112px 0 #000,
-        113px 113px 0 #000,
-        114px 114px 0 #000,
-        115px 115px 0 #000,
-        116px 116px 0 #000,
-        117px 117px 0 #000,
-        118px 118px 0 #000,
-        119px 119px 0 #000,
-        120px 120px 0 #000,
-        121px 121px 0 #000,
-        122px 122px 0 #000,
-        123px 123px 0 #000,
-        124px 124px 0 #000,
-        125px 125px 0 #000,
-        126px 126px 0 #000,
-        127px 127px 0 #000,
-        128px 128px 0 #000,
-        129px 129px 0 #000,
-        130px 130px 0 #000,
-        131px 131px 0 #000,
-        132px 132px 0 #000,
-        133px 133px 0 #000,
-        134px 134px 0 #000,
-        135px 135px 0 #000,
-        136px 136px 0 #000,
-        137px 137px 0 #000,
-        138px 138px 0 #000,
-        139px 139px 0 #000,
-        140px 140px 0 #000,
-        141px 141px 0 #000,
-        142px 142px 0 #000,
-        143px 143px 0 #000,
-        144px 144px 0 #000,
-        145px 145px 0 #000,
-        146px 146px 0 #000,
-        147px 147px 0 #000,
-        148px 148px 0 #000,
-        149px 149px 0 #000,
-        150px 150px 0 #000,
-        151px 151px 0 #000,
-        152px 152px 0 #000,
-        153px 153px 0 #000,
-        154px 154px 0 #000,
-        155px 155px 0 #000,
-        156px 156px 0 #000,
-        157px 157px 0 #000,
-        158px 158px 0 #000,
-        159px 159px 0 #000,
-        160px 160px 0 #000,
-        161px 161px 0 #000,
-        162px 162px 0 #000,
-        163px 163px 0 #000,
-        164px 164px 0 #000,
-        165px 165px 0 #000,
-        166px 166px 0 #000,
-        167px 167px 0 #000,
-        168px 168px 0 #000,
-        169px 169px 0 #000,
-        170px 170px 0 #000,
-        171px 171px 0 #000,
-        172px 172px 0 #000,
-        173px 173px 0 #000,
-        174px 174px 0 #000,
-        175px 175px 0 #000,
-        176px 176px 0 #000,
-        177px 177px 0 #000,
-        178px 178px 0 #000,
-        179px 179px 0 #000,
-        180px 180px 0 #000,
-        181px 181px 0 #000,
-        182px 182px 0 #000,
-        183px 183px 0 #000,
-        184px 184px 0 #000,
-        185px 185px 0 #000,
-        186px 186px 0 #000,
-        187px 187px 0 #000,
-        188px 188px 0 #000,
-        189px 189px 0 #000,
-        190px 190px 0 #000,
-        191px 191px 0 #000,
-        192px 192px 0 #000,
-        193px 193px 0 #000,
-        194px 194px 0 #000,
-        195px 195px 0 #000,
-        196px 196px 0 #000,
-        197px 197px 0 #000,
-        198px 198px 0 #000,
-        200px 200px 0 transparent;
+    text-shadow: 0px 0px 0 #152238,
+    1px 1px 0 #152238,
+    2px 2px 0 #152238,
+    3px 3px 0 #152238,
+    4px 4px 0 #152238,
+    5px 5px 0 #152238,
+    6px 6px 0 #152238,
+    7px 7px 0 #152238,
+    8px 8px 0 #152238,
+    9px 9px 0 #152238,
+    10px 10px 0 #152238,
+    11px 11px 0 #152238,
+    12px 12px 0 #152238,
+    13px 13px 0 #152238,
+    14px 14px 0 #152238,
+    15px 15px 0 #152238,
+    16px 16px 0 #152238,
+    17px 17px 0 #152238,
+    18px 18px 0 #152238,
+    19px 19px 0 #152238,
+    20px 20px 0 #152238,
+    21px 21px 0 #152238,
+    22px 22px 0 #152238,
+    23px 23px 0 #152238,
+    24px 24px 0 #152238,
+    25px 25px 0 #152238,
+    26px 26px 0 #152238,
+    27px 27px 0 #152238,
+    28px 28px 0 #152238,
+    29px 29px 0 #152238,
+    30px 30px 0 #152238,
+    31px 31px 0 #152238,
+    32px 32px 0 #152238,
+    33px 33px 0 #152238,
+    34px 34px 0 #152238,
+    35px 35px 0 #152238,
+    36px 36px 0 #152238,
+    37px 37px 0 #152238,
+    38px 38px 0 #152238,
+    39px 39px 0 #152238,
+    40px 40px 0 #152238,
+    41px 41px 0 #152238,
+    42px 42px 0 #152238,
+    43px 43px 0 #152238,
+    44px 44px 0 #152238,
+    45px 45px 0 #152238,
+    46px 46px 0 #152238,
+    47px 47px 0 #152238,
+    48px 48px 0 #152238,
+    49px 49px 0 #152238,
+    50px 50px 0 #152238,
+    51px 51px 0 #152238,
+    52px 52px 0 #152238,
+    53px 53px 0 #152238,
+    54px 54px 0 #152238,
+    55px 55px 0 #152238,
+    56px 56px 0 #152238,
+    57px 57px 0 #152238,
+    58px 58px 0 #152238,
+    59px 59px 0 #152238,
+    60px 60px 0 #152238,
+    61px 61px 0 #152238,
+    62px 62px 0 #152238,
+    63px 63px 0 #152238,
+    64px 64px 0 #152238,
+    65px 65px 0 #152238,
+    66px 66px 0 #152238,
+    67px 67px 0 #152238,
+    68px 68px 0 #152238,
+    69px 69px 0 #152238,
+    70px 70px 0 #152238,
+    71px 71px 0 #152238,
+    72px 72px 0 #152238,
+    73px 73px 0 #152238,
+    74px 74px 0 #152238,
+    75px 75px 0 #152238,
+    76px 76px 0 #152238,
+    77px 77px 0 #152238,
+    78px 78px 0 #152238,
+    79px 79px 0 #152238,
+    80px 80px 0 #152238,
+    81px 81px 0 #152238,
+    82px 82px 0 #152238,
+    83px 83px 0 #152238,
+    84px 84px 0 #152238,
+    85px 85px 0 #152238,
+    86px 86px 0 #152238,
+    87px 87px 0 #152238,
+    88px 88px 0 #152238,
+    89px 89px 0 #152238,
+    90px 90px 0 #152238,
+    91px 91px 0 #152238,
+    92px 92px 0 #152238,
+    93px 93px 0 #152238,
+    94px 94px 0 #152238,
+    95px 95px 0 #152238,
+    96px 96px 0 #152238,
+    97px 97px 0 #152238,
+    98px 98px 0 #152238,
+    99px 99px 0 #152238,
+    100px 100px 0 #152238,
+    101px 101px 0 #152238,
+    102px 102px 0 #152238,
+    103px 103px 0 #152238,
+    104px 104px 0 #152238,
+    105px 105px 0 #152238,
+    106px 106px 0 #152238,
+    107px 107px 0 #152238,
+    108px 108px 0 #152238,
+    109px 109px 0 #152238,
+    110px 110px 0 #152238,
+    111px 111px 0 #152238,
+    112px 112px 0 #152238,
+    113px 113px 0 #152238,
+    114px 114px 0 #152238,
+    115px 115px 0 #152238,
+    116px 116px 0 #152238,
+    117px 117px 0 #152238,
+    118px 118px 0 #152238,
+    119px 119px 0 #152238,
+    120px 120px 0 #152238,
+    121px 121px 0 #152238,
+    122px 122px 0 #152238,
+    123px 123px 0 #152238,
+    124px 124px 0 #152238,
+    125px 125px 0 #152238,
+    126px 126px 0 #152238,
+    127px 127px 0 #152238,
+    128px 128px 0 #152238,
+    129px 129px 0 #152238,
+    130px 130px 0 #152238,
+    131px 131px 0 #152238,
+    132px 132px 0 #152238,
+    133px 133px 0 #152238,
+    134px 134px 0 #152238,
+    135px 135px 0 #152238,
+    136px 136px 0 #152238,
+    137px 137px 0 #152238,
+    138px 138px 0 #152238,
+    139px 139px 0 #152238,
+    140px 140px 0 #152238,
+    141px 141px 0 #152238,
+    142px 142px 0 #152238,
+    143px 143px 0 #152238,
+    144px 144px 0 #152238,
+    145px 145px 0 #152238,
+    146px 146px 0 #152238,
+    147px 147px 0 #152238,
+    148px 148px 0 #152238,
+    149px 149px 0 #152238,
+    150px 150px 0 #152238,
+    151px 151px 0 #152238,
+    152px 152px 0 #152238,
+    153px 153px 0 #152238,
+    154px 154px 0 #152238,
+    155px 155px 0 #152238,
+    156px 156px 0 #152238,
+    157px 157px 0 #152238,
+    158px 158px 0 #152238,
+    159px 159px 0 #152238,
+    160px 160px 0 #152238,
+    161px 161px 0 #152238,
+    162px 162px 0 #152238,
+    163px 163px 0 #152238,
+    164px 164px 0 #152238,
+    165px 165px 0 #152238,
+    166px 166px 0 #152238,
+    167px 167px 0 #152238,
+    168px 168px 0 #152238,
+    169px 169px 0 #152238,
+    170px 170px 0 #152238,
+    171px 171px 0 #152238,
+    172px 172px 0 #152238,
+    173px 173px 0 #152238,
+    174px 174px 0 #152238,
+    175px 175px 0 #152238,
+    176px 176px 0 #152238,
+    177px 177px 0 #152238,
+    178px 178px 0 #152238,
+    179px 179px 0 #152238,
+    180px 180px 0 #152238,
+    181px 181px 0 #152238,
+    182px 182px 0 #152238,
+    183px 183px 0 #152238,
+    184px 184px 0 #152238,
+    185px 185px 0 #152238,
+    186px 186px 0 #152238,
+    187px 187px 0 #152238,
+    188px 188px 0 #152238,
+    189px 189px 0 #152238,
+    190px 190px 0 #152238,
+    191px 191px 0 #152238,
+    192px 192px 0 #152238,
+    193px 193px 0 #152238,
+    194px 194px 0 #152238,
+    195px 195px 0 #152238,
+    196px 196px 0 #152238,
+    197px 197px 0 #152238,
+    198px 198px 0 #152238,
+    199px 199px 0 #152238,
+    200px 200px 0 #152238,
+    201px 201px 0 #152238,
+    202px 202px 0 #152238,
+    203px 203px 0 #152238,
+    204px 204px 0 #152238,
+    205px 205px 0 #152238,
+    206px 206px 0 #152238,
+    207px 207px 0 #152238,
+    208px 208px 0 #152238,
+    209px 209px 0 #152238,
+    210px 210px 0 #152238,
+    211px 211px 0 #152238,
+    212px 212px 0 #152238,
+    213px 213px 0 #152238,
+    214px 214px 0 #152238,
+    215px 215px 0 #152238,
+    216px 216px 0 #152238,
+    217px 217px 0 #152238,
+    218px 218px 0 #152238,
+    219px 219px 0 #152238,
+    220px 220px 0 #152238,
+    221px 221px 0 #152238,
+    222px 222px 0 #152238,
+    223px 223px 0 #152238,
+    224px 224px 0 #152238,
+    225px 225px 0 #152238,
+    226px 226px 0 #152238,
+    227px 227px 0 #152238,
+    228px 228px 0 #152238,
+    229px 229px 0 #152238,
+    230px 230px 0 #152238,
+    231px 231px 0 #152238,
+    232px 232px 0 #152238,
+    233px 233px 0 #152238,
+    234px 234px 0 #152238,
+    235px 235px 0 #152238,
+    236px 236px 0 #152238,
+    237px 237px 0 #152238,
+    238px 238px 0 #152238,
+    239px 239px 0 #152238,
+    240px 240px 0 #152238,
+    241px 241px 0 #152238,
+    242px 242px 0 #152238,
+    243px 243px 0 #152238,
+    244px 244px 0 #152238,
+    245px 245px 0 #152238,
+    246px 246px 0 #152238,
+    247px 247px 0 #152238,
+    248px 248px 0 #152238,
+    249px 249px 0 #152238,
+    250px 250px 0 #152238,
+    251px 251px 0 #152238,
+    252px 252px 0 #152238,
+    253px 253px 0 #152238,
+    254px 254px 0 #152238,
+    255px 255px 0 #152238,
+    256px 256px 0 #152238,
+    257px 257px 0 #152238,
+    258px 258px 0 #152238,
+    259px 259px 0 #152238,
+    260px 260px 0 #152238,
+    261px 261px 0 #152238,
+    262px 262px 0 #152238,
+    263px 263px 0 #152238,
+    264px 264px 0 #152238,
+    265px 265px 0 #152238,
+    266px 266px 0 #152238,
+    267px 267px 0 #152238,
+    268px 268px 0 #152238,
+    269px 269px 0 #152238,
+    270px 270px 0 #152238,
+    271px 271px 0 #152238,
+    272px 272px 0 #152238,
+    273px 273px 0 #152238,
+    274px 274px 0 #152238,
+    275px 275px 0 #152238,
+    276px 276px 0 #152238,
+    277px 277px 0 #152238,
+    278px 278px 0 #152238,
+    279px 279px 0 #152238,
+    280px 280px 0 #152238,
+    281px 281px 0 #152238,
+    282px 282px 0 #152238,
+    283px 283px 0 #152238,
+    284px 284px 0 #152238,
+    285px 285px 0 #152238,
+    286px 286px 0 #152238,
+    287px 287px 0 #152238,
+    288px 288px 0 #152238,
+    289px 289px 0 #152238,
+    290px 290px 0 #152238,
+    291px 291px 0 #152238,
+    292px 292px 0 #152238,
+    293px 293px 0 #152238,
+    294px 294px 0 #152238,
+    295px 295px 0 #152238,
+    296px 296px 0 #152238,
+    297px 297px 0 #152238,
+    298px 298px 0 #152238,
+    299px 299px 0 #152238,
+    300px 300px 0 #152238,
+    301px 301px 0 #152238,
+    302px 302px 0 #152238,
+    303px 303px 0 #152238,
+    304px 304px 0 #152238,
+    305px 305px 0 #152238,
+    306px 306px 0 #152238,
+    307px 307px 0 #152238,
+    308px 308px 0 #152238,
+    309px 309px 0 #152238,
+    310px 310px 0 #152238,
+    311px 311px 0 #152238,
+    312px 312px 0 #152238,
+    313px 313px 0 #152238,
+    314px 314px 0 #152238,
+    315px 315px 0 #152238,
+    316px 316px 0 #152238,
+    317px 317px 0 #152238,
+    318px 318px 0 #152238,
+    319px 319px 0 #152238,
+    320px 320px 0 #152238,
+    321px 321px 0 #152238,
+    322px 322px 0 #152238,
+    323px 323px 0 #152238,
+    324px 324px 0 #152238,
+    325px 325px 0 #152238,
+    326px 326px 0 #152238,
+    327px 327px 0 #152238,
+    328px 328px 0 #152238,
+    329px 329px 0 #152238,
+    330px 330px 0 #152238,
+    331px 331px 0 #152238,
+    332px 332px 0 #152238,
+    333px 333px 0 #152238,
+    334px 334px 0 #152238,
+    335px 335px 0 #152238,
+    336px 336px 0 #152238,
+    337px 337px 0 #152238,
+    338px 338px 0 #152238,
+    339px 339px 0 #152238,
+    340px 340px 0 #152238,
+    341px 341px 0 #152238,
+    342px 342px 0 #152238,
+    343px 343px 0 #152238,
+    344px 344px 0 #152238,
+    345px 345px 0 #152238,
+    346px 346px 0 #152238,
+    347px 347px 0 #152238,
+    348px 348px 0 #152238,
+    349px 349px 0 #152238,
+    350px 350px 0 #152238,
+    351px 351px 0 #152238,
+    352px 352px 0 #152238,
+    353px 353px 0 #152238,
+    354px 354px 0 #152238,
+    355px 355px 0 #152238,
+    356px 356px 0 #152238,
+    357px 357px 0 #152238,
+    358px 358px 0 #152238,
+    359px 359px 0 #152238,
+    360px 360px 0 #152238,
+    361px 361px 0 #152238,
+    362px 362px 0 #152238,
+    363px 363px 0 #152238,
+    364px 364px 0 #152238,
+    365px 365px 0 #152238,
+    366px 366px 0 #152238,
+    367px 367px 0 #152238,
+    368px 368px 0 #152238,
+    369px 369px 0 #152238,
+    370px 370px 0 #152238,
+    371px 371px 0 #152238,
+    372px 372px 0 #152238,
+    373px 373px 0 #152238,
+    374px 374px 0 #152238,
+    375px 375px 0 #152238,
+    376px 376px 0 #152238,
+    377px 377px 0 #152238,
+    378px 378px 0 #152238,
+    379px 379px 0 #152238,
+    380px 380px 0 #152238,
+    381px 381px 0 #152238,
+    382px 382px 0 #152238,
+    383px 383px 0 #152238,
+    384px 384px 0 #152238,
+    385px 385px 0 #152238,
+    386px 386px 0 #152238,
+    387px 387px 0 #152238,
+    388px 388px 0 #152238,
+    389px 389px 0 #152238,
+    390px 390px 0 #152238,
+    391px 391px 0 #152238,
+    392px 392px 0 #152238,
+    393px 393px 0 #152238,
+    394px 394px 0 #152238,
+    395px 395px 0 #152238,
+    396px 396px 0 #152238,
+    397px 397px 0 #152238,
+    398px 398px 0 #152238,
+    399px 399px 0 transparent;
 }
 
 
@@ -274,6 +497,10 @@ header {
 
 header .btn {
     min-width: 150px;
+}
+
+.navbar-light .navbar-toggler {
+    border: 0 none;
 }
 
 .navbar-brand {
@@ -298,10 +525,25 @@ header .btn {
 
 .hero-wrap {
     align-items: flex-end;
+    position: relative;
 }
 
 .hero__item--1 {
     background: var(--brand-pink);
+}
+
+.hero-yellow-shape {
+    position: absolute;
+    top: 15%;
+    width: 120px;
+    left: -100px;
+}
+
+.hero-dots-l {
+    position: absolute;
+    bottom: 2%;
+    width: 760px;
+    right: 88%;
 }
 
 .hero__item--2 {
@@ -362,6 +604,40 @@ header .btn {
     right: auto;
 }
 
+.slick-next:before {
+    font-family: var(--font-fa);
+    content: "\f138";
+    font-weight: 600;
+}
+
+.slick-prev:before {
+    font-family: var(--font-fa);
+    content: "\f137";
+    font-weight: 600;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: 25px;
+}
+
+.slick-dots li button {
+    width: 12px;
+    height: 12px;
+    background: white;
+    border-radius: 50%;
+}
+
+.slick-dots li.slick-active button {
+    background: var(--brand-red);
+}
+
+.slick-dots li button:before {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    content: none;
+}
 
 
 /* Large devices (desktops, less than 1200px) */
@@ -388,7 +664,7 @@ header .btn {
     }
 
     .hero-text {
-        padding: 20% 0 10%;
+        padding: 15% 0 10%;
     }
 
     .hero-text__small {
@@ -403,12 +679,17 @@ header .btn {
         color: var(--brand-white);
     }
 
+    .hero-text__big {
+        font-size: 16px;
+        margin-bottom: 18px;
+    }
+
     .hero-text__number-sym {
         font-size: 60px;
     }
 
     .hero-media > img {
-        max-width: 450px;
+        max-width: 330px;
         transform: translateX(0);
         display: block;
         margin: auto;
