--- a/css/style.css
+++ b/css/style.css
@@ -14,22 +14,12 @@ style.css
     font-family: "Font Awesome 5 Free";
 }
 
-@font-face {
-    font-family: 'Font Awesome Regular';
-    src: url('../fonts/fa-regular-400.eot');
-    src: url('../fonts/fa-regular-400.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/fa-regular-400.woff2') format('woff2'),
-        url('../fonts/fa-regular-400.woff') format('woff'),
-        url('../fonts/fa-regular-400.ttf') format('truetype'),
-        url('../fonts/fa-regular-400.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 /* VARIABLES */
 :root {
     --brand-white: #FFF;
     --brand-red: #F01B2B;   
+    --brand-red-2: #B01521;
     --brand-dark-blue-1: #0048D0;   
     --brand-dark-blue-2: #005DFF;   
     --brand-light-blue-1: #67BEC9;   
@@ -37,6 +27,7 @@ style.css
     --brand-pink: #FFB9C8;   
     --brand-yellow: #FAD62A;   
     --brand-dark-gray: #152238;   
+    --brand-dark-gray-2: #666666;   
     --brand-light-gray: #EEF2FB;   
     --brand-purple: #A73BEC;  
     --brand-green: #00CF4C;
@@ -45,14 +36,36 @@ style.css
     --font-fa: "Font Awesome 5 Free";
 }
 
+.color-yellow {
+    color: var(--brand-yellow);
+}
+
+p {
+    font-weight: 300;
+}
+
+.h1,
+h1 {
+    font-size: 2.8rem;
+}
+
 
 
 
 
 /* BUTTONS */
 .btn {
-    padding: 0.45rem 0.95rem;
+    padding: 0.45rem 1.75rem;
 }
+
+.btn--padd-xs {
+    padding: 0.25rem .75rem;
+}
+
+.btn--cern {
+    letter-spacing: 3px;
+}
+
 .btn-primary {
     background-color: var(--brand-red);
     border-color: var(--brand-red);
@@ -60,6 +73,11 @@ style.css
 
 .btn-primary:hover {
     color: #fff;
+    background-color: var(--brand-red-2);
+    border-color: var(--brand-red-2);
+}
+
+.btn-primary:not(:disabled):not(.disabled):active {
     background-color: var(--brand-red);
     border-color: var(--brand-red);
 }
@@ -80,6 +98,43 @@ style.css
     background-color: transparent;
     border-color: var(--brand-white);
     border-width: 2px;
+}
+
+.btn-dark {
+    color: var(--brand-white);
+    border-color: var(--brand-dark-gray);
+    background-color: var(--brand-dark-gray);
+    border-width: 2px;
+}
+
+.btn-dark:hover {
+    color: var(--brand-white);
+    border-color: var(--brand-dark-gray-2);
+    background-color: var(--brand-dark-gray-2);
+}
+
+.btn-dark:not(:disabled):not(.disabled):active {
+    color: var(--brand-white);
+    border-color: var(--brand-dark-gray);
+    background-color: var(--brand-dark-gray);
+    border-width: 2px;
+}
+
+.btn-dark--inactive {
+    color: var(--brand-dark-gray-2);
+    border-color: var(--brand-white);
+    background-color: var(--brand-white);
+    border-width: 2px;
+}
+
+
+/* FORMS */
+label {
+    font-weight: 600;
+}
+
+select {
+    font-weight: 300 !important;
 }
 
 
@@ -507,9 +562,23 @@ header .btn {
     margin-right: 36px;
 }
 
+.nav-link {
+    font-weight: 500;
+}
+
 .dropdown-menu {
     border: 0 none;
-    border-radius: 0;
+    border-radius: 0;.nav-link {
+    display: block;
+    padding: .5rem 1rem;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    font-weight: 500;
+}
+}
+
+.dropdown-item {
+    padding: .5rem 1.5rem;
 }
 
 
@@ -519,7 +588,7 @@ header .btn {
 }
 
 .hero__item {
-    padding-top: 70px;
+    padding-top: 100px;
     overflow: hidden;
 }
 
@@ -546,23 +615,30 @@ header .btn {
     right: 88%;
 }
 
+.hero-dots-2 {
+    position: absolute;
+   bottom: 0;
+   width: 760px;
+   left: 96%;
+}
+
 .hero__item--2 {
     background: var(--brand-light-blue-1);
 }
 
 .hero-text {
-    padding: 10vw 0;
+    padding: 8vw 0 12vw;
 }
 
 .hero-text__small {
-    font-size: 4vw;
+    font-size: 4.5vw;
     font-weight: 700;
     margin-bottom: -10px;
     line-height: 1;
 }
 
 .hero-text__number {
-    font-size: 10vw;
+    font-size: 10.5vw;
     font-family: var(--font-barlow);
     line-height: 1;
     color: var(--brand-white);
@@ -582,8 +658,8 @@ header .btn {
 }
 
 .hero-media > img {
-    max-width: 45vw;
-    transform: translateX(-150px);
+    max-width: 48vw;
+    transform: translateX(-130px);
 }
 
 
@@ -638,6 +714,62 @@ header .btn {
     border-radius: 50%;
     content: none;
 }
+
+
+/* HOME RESULTS */
+.home-results {
+    border-radius: 10px;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, .3);
+    z-index: 5;
+    background: var(--brand-white);
+    position: relative;
+    margin-top: -80px;
+    padding: 50px 60px;
+}
+
+.home-results__hd {
+    display: flex;
+    align-items: flex-start;
+}
+
+.home-results__hd img {
+    width: 80px;
+    margin-right: 40px;
+}
+
+.home-results__hd span {
+    font-weight: 700;
+}
+
+.home-results__btns {
+    min-width: 102px;
+}
+
+.hero-balls__logo {
+    width: 80px;
+    fill: var(--brand-dark-gray);
+}
+
+.hero-balls-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-balls-wrap.hero-balls-wrap--yellow .hero-balls-wrap__items {
+    background-color: var(--brand-yellow);
+}
+
+.hero-balls-wrap__items {
+    padding: 10px;
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+
 
 
 /* Large devices (desktops, less than 1200px) */
